Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-6068

[Python] Hypothesis test failure, Add StructType::Make that accepts vector of fields

    XMLWordPrintableJSON

Details

    Description

      $ python -m pytest --hypothesis-seed=249088922892200171383018406164042644900 --hypothesis --tb=native pyarrow/tests/test_strategies.py 
      =========================================================================== test session starts ============================================================================
      platform linux -- Python 3.7.3, pytest-5.0.1, py-1.8.0, pluggy-0.12.0
      hypothesis profile 'dev' -> max_examples=10, database=DirectoryBasedExampleDatabase('/home/antoine/arrow/dev/python/.hypothesis/examples')
      rootdir: /home/antoine/arrow/dev/python, inifile: setup.cfg
      plugins: timeout-1.3.3, repeat-0.8.0, hypothesis-3.82.1, forked-1.0.2, xdist-1.28.0
      collected 7 items                                                                                                                                                          
      
      pyarrow/tests/test_strategies.py ......F                                                                                                                             [100%]
      
      ================================================================================= FAILURES =================================================================================
      _______________________________________________________________________________ test_tables ________________________________________________________________________________
      Traceback (most recent call last):
        File "/home/antoine/arrow/dev/python/pyarrow/tests/test_strategies.py", line 55, in test_tables
          def test_tables(table):
        File "/home/antoine/miniconda3/envs/pyarrow/lib/python3.7/site-packages/hypothesis/core.py", line 960, in wrapped_test
          raise the_error_hypothesis_found
        File "/home/antoine/arrow/dev/python/pyarrow/tests/strategies.py", line 249, in tables
          return pa.Table.from_arrays(children, schema=schema)
        File "pyarrow/table.pxi", line 1018, in pyarrow.lib.Table.from_arrays
          return pyarrow_wrap_table(CTable.Make(c_schema, columns))
        File "pyarrow/public-api.pxi", line 314, in pyarrow.lib.pyarrow_wrap_table
          check_status(ctable.get().Validate())
        File "pyarrow/error.pxi", line 76, in pyarrow.lib.check_status
          raise ArrowInvalid(message)
      pyarrow.lib.ArrowInvalid: Column data for field 11 with type struct<: null, : null, : null, : null, : null, : null> is inconsistent with schema struct<: null, : null, : null, : null not null, : null, : null>
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m