ARROW-6068: [C++] Allow passing Field instances to StructArray::Make

This helps fix a Python test failure when hypothesis testing is enabled.