python/pyarrow/array.pxi
@@ -1380,16 +1380,20 @@ cdef class StructArray(Array):
         return [pyarrow_wrap_array(arr) for arr in arrays]
 
     @staticmethod
-    def from_arrays(arrays, names=None):
+    def from_arrays(arrays, names=None, fields=None):
         """
-        Construct StructArray from collection of arrays representing each field
-        in the struct
+        Construct StructArray from collection of arrays representing
+        each field in the struct.
+
+        Either field names or field instances must be passed.
 
         Parameters
         ----------
         arrays : sequence of Array
-        names : List[str]
-            Field names
+        names : List[str] (optional)
+            Field names for each struct child
+        fields : List[Field] (optional)
+            Field instances for each struct child
 
         Returns
         -------
@@ -1399,29 +1403,46 @@ cdef class StructArray(Array):
             shared_ptr[CArray] c_array
             vector[shared_ptr[CArray]] c_arrays
             vector[c_string] c_names
+            vector[shared_ptr[CField]] c_fields
             CResult[shared_ptr[CArray]] c_result
             ssize_t num_arrays
             ssize_t length
             ssize_t i
+            Field py_field
             DataType struct_type
 
-        if names is None:
-            raise ValueError('Names are currently required')
+        if names is None and fields is None:
+            raise ValueError('Must pass either names or fields')
+        if names is not None and fields is not None:
+            raise ValueError('Must pass either names or fields, not both')
 
         arrays = [asarray(x) for x in arrays]
         for arr in arrays:
             c_arrays.push_back(pyarrow_unwrap_array(arr))
-        for name in names:
-            c_names.push_back(tobytes(name))
+        if names is not None:
+            for name in names:
+                c_names.push_back(tobytes(name))
+        else:
+            for item in fields:
+                if isinstance(item, tuple):
+                    py_field = field(*item)
+                else:
+                    py_field = item
+                c_fields.push_back(py_field.sp_field)
 
-        if c_arrays.size() == 0 and c_names.size() == 0:
+        if (c_arrays.size() == 0 and c_names.size() == 0 and
+                c_fields.size() == 0):
             # The C++ side doesn't allow this
             return array([], struct([]))
 
-        # XXX Cannot pass "nullptr" for a shared_ptr<T> argument:
-        # https://github.com/cython/cython/issues/3020
-        c_result = CStructArray.Make(c_arrays, c_names,
-                                     shared_ptr[CBuffer](), -1, 0)
+        if names is not None:
+            # XXX Cannot pass "nullptr" for a shared_ptr<T> argument:
+            # https://github.com/cython/cython/issues/3020
+            c_result = CStructArray.MakeFromFieldNames(
+                c_arrays, c_names, shared_ptr[CBuffer](), -1, 0)
+        else:
+            c_result = CStructArray.MakeFromFields(
+                c_arrays, c_fields, shared_ptr[CBuffer](), -1, 0)
         return pyarrow_wrap_array(GetResultValue(c_result))
 
 
